# stellar-handshake

./: Cargo.toml  handshake.md  readme.md
configuration/: mainnet.yaml
crates/handshake/: Cargo.toml
crates/handshake/src/: connection.rs  handshake.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: connection_authentication.rs  constants.rs  errors.rs  keychain.rs  lib.rs  node_config.rs  protocol.rs  public_key.rs  remote_node_info.rs  stellar_protocol.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  misc.rs  sha2.rs
crates/xdr/: Cargo.toml
crates/xdr/src/: auth_cert.rs  compound_types.rs  constants.rs  lengthed_array.rs  lib.rs  messages.rs  streams.rs  types.rs  xdr_codable.rs  xdr_codec.rs
src/: connection.rs  connection_authentication.rs  handshake.rs  keychain.rs  keypair.rs  keypair_type.rs  main.rs  node_config.rs  node_info.rs  public_key.rs  remote_node_info.rs  stellar_protocol.rs
src/protocol/: connection_authentication.rs  errors.rs  keychain.rs  mod.rs  protocol.rs  remote_node_info.rs  stellar_protocol.rs
src/utils/: base32.rs  misc.rs  mod.rs  sha2.rs
src/xdr/: Curve25519Secret.rs  auth_cert.rs  compound_types.rs  constants.rs  curve25519_public.rs  curve25519_secret.rs  curve25519public.rs  hello.rs  lengthed_array.rs  messages.rs  mod.rs  stellar_messages.rs  streams.rs  types.rs  xdr_codable.rs  xdr_codec.rs
