[package]
name = "stellar-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

data-encoding = "2.3"
dryoc = "0.5.1"
ring = "0.16.20"
byteorder = "1.4.3"
rand = "0.8.5"
tokio = {version = "1.32.0", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"] }
base64 = "0.21.4"