[package]
name = "handshake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "handshake"
path = "src/main.rs"

[dependencies]
dryoc = { workspace = true }
ring = { workspace = true }
thiserror = {workspace = true}
data-encoding = {workspace = true}
anyhow = {workspace = true}
tokio = {workspace = true}
bytes = {workspace = true}
utils = {path = "../utils" }
protocol = {path = "../protocol" }
simple_logger = "4"
log = "0.4"
confy = "0.5"
serde = { version = "1.0.189", features = ["derive"] }
config = { version = "0.13.3", features = [] }
serde-aux = "4.2.0"