[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocol"
path = "src/lib.rs"

[dependencies]
dryoc = { workspace = true }
ring = { workspace = true }
utils = {path = "../utils" }
xdr = {path = "../../../substrate-stellar-sdk", package = "substrate-stellar-sdk", features = ["all-types", "default"]}
thiserror = {workspace = true}
data-encoding = {workspace = true}
anyhow = {workspace = true}