[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocol"
path = "src/lib.rs"

[dependencies]
dryoc = { workspace = true }
ring = { workspace = true }
utils = {path = "../utils" }
xdr = {path = "../xdr" }
thiserror = {workspace = true}
data-encoding = {workspace = true}
anyhow = {workspace = true}
serde = "1.0.189"